--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <title>My Flappy Cube</title>
     <script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <style>
+      body {
+        margin: 0;
+        background: #ccc;
+      }
+      canvas {
+        box-shadow: 0 0 25px black;
+        right: 0;
+        left: 0;
+        margin: auto;
+      }
+    </style>
   </head>
   <body></body>
 </html>
